[project]
name = "customer-support-email-agent-langgraph"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=1.3.9",
    "langchain-core>=1.4.7",
    "langchain-groq>=1.1.3",
    "langgraph>=1.2.5",
    "python-dotenv>=1.2.2",
]
